--- a/EnrollmentApplication/EnrollmentApplication/EnrollmentApplication.csproj
+++ b/EnrollmentApplication/EnrollmentApplication/EnrollmentApplication.csproj
@@ -201,6 +201,9 @@
     <Content Include="Views\Enrollment\Details.cshtml" />
     <Content Include="Views\Enrollment\Edit.cshtml" />
     <Content Include="Views\Enrollment\Index.cshtml" />
+    <Content Include="Views\Enrollment\Test.cshtml" />
+    <Content Include="Views\Enrollment\Linq.cshtml" />
+    <Content Include="Views\Enrollment\LinkExtension.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
