--- a/EnrollmentApplication/EnrollmentApplication/EnrollmentApplication.csproj
+++ b/EnrollmentApplication/EnrollmentApplication/EnrollmentApplication.csproj
@@ -148,14 +148,51 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\EnrollmentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810101847511_InitialCreate.cs" />
+    <Compile Include="Migrations\201810101847511_InitialCreate.Designer.cs">
+      <DependentUpon>201810101847511_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810101933044_20181010_Update1.cs" />
+    <Compile Include="Migrations\201810101933044_20181010_Update1.Designer.cs">
+      <DependentUpon>201810101933044_20181010_Update1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810102018527_1010_StudentUpdate1.cs" />
+    <Compile Include="Migrations\201810102018527_1010_StudentUpdate1.Designer.cs">
+      <DependentUpon>201810102018527_1010_StudentUpdate1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810102215396_StudentUpdate_Illustration.cs" />
+    <Compile Include="Migrations\201810102215396_StudentUpdate_Illustration.Designer.cs">
+      <DependentUpon>201810102215396_StudentUpdate_Illustration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810102310161_CoursesUpdate.cs" />
+    <Compile Include="Migrations\201810102310161_CoursesUpdate.Designer.cs">
+      <DependentUpon>201810102310161_CoursesUpdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810102341316_InvalidCharsUpdate.cs" />
+    <Compile Include="Migrations\201810102341316_InvalidCharsUpdate.Designer.cs">
+      <DependentUpon>201810102341316_InvalidCharsUpdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810112057475_InvalidCharsUpdate1.cs" />
+    <Compile Include="Migrations\201810112057475_InvalidCharsUpdate1.Designer.cs">
+      <DependentUpon>201810112057475_InvalidCharsUpdate1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810112243088_StudentUpdate1.cs" />
+    <Compile Include="Migrations\201810112243088_StudentUpdate1.Designer.cs">
+      <DependentUpon>201810112243088_StudentUpdate1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Enrollment.cs" />
     <Compile Include="Models\EnrollmentDB.cs" />
+    <Compile Include="Models\InvalidCharsAttribute.cs" />
+    <Compile Include="Models\MinimumAgeAttribute.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -201,6 +238,16 @@
     <Content Include="Views\Enrollment\Details.cshtml" />
     <Content Include="Views\Enrollment\Edit.cshtml" />
     <Content Include="Views\Enrollment\Index.cshtml" />
+    <Content Include="Views\Students\Create.cshtml" />
+    <Content Include="Views\Students\Delete.cshtml" />
+    <Content Include="Views\Students\Details.cshtml" />
+    <Content Include="Views\Students\Edit.cshtml" />
+    <Content Include="Views\Students\Index.cshtml" />
+    <Content Include="Views\Courses\Create.cshtml" />
+    <Content Include="Views\Courses\Delete.cshtml" />
+    <Content Include="Views\Courses\Details.cshtml" />
+    <Content Include="Views\Courses\Edit.cshtml" />
+    <Content Include="Views\Courses\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -217,6 +264,32 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201810101847511_InitialCreate.resx">
+      <DependentUpon>201810101847511_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810101933044_20181010_Update1.resx">
+      <DependentUpon>201810101933044_20181010_Update1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810102018527_1010_StudentUpdate1.resx">
+      <DependentUpon>201810102018527_1010_StudentUpdate1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810102215396_StudentUpdate_Illustration.resx">
+      <DependentUpon>201810102215396_StudentUpdate_Illustration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810102310161_CoursesUpdate.resx">
+      <DependentUpon>201810102310161_CoursesUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810102341316_InvalidCharsUpdate.resx">
+      <DependentUpon>201810102341316_InvalidCharsUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810112057475_InvalidCharsUpdate1.resx">
+      <DependentUpon>201810112057475_InvalidCharsUpdate1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810112243088_StudentUpdate1.resx">
+      <DependentUpon>201810112243088_StudentUpdate1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
