--- a/MVCMusicStoreApplication/MVCMusicStoreApplication/MVCMusicStoreApplication.csproj
+++ b/MVCMusicStoreApplication/MVCMusicStoreApplication/MVCMusicStoreApplication.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Controllers\ArtistsController.cs" />
     <Compile Include="Controllers\GenresController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\StoreController.cs" />
     <Compile Include="Controllers\StoreManagerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -160,6 +161,7 @@
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\MVCMusicStoreApplicationDB.cs" />
     <Compile Include="Models\SampleData.cs" />
+    <Compile Include="Models\Store.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -225,6 +227,9 @@
     <Content Include="Views\Genres\Index.cshtml" />
     <Content Include="Views\StoreManager\_DailyDeal.cshtml" />
     <Content Include="Views\StoreManager\ArtistSearch.cshtml" />
+    <Content Include="Views\Store\Browse.cshtml" />
+    <Content Include="Views\Store\Index.cshtml" />
+    <Content Include="Views\Store\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
