--- a/EventApplication/EventApplication/EventApplication.csproj
+++ b/EventApplication/EventApplication/EventApplication.csproj
@@ -211,6 +211,10 @@
     <Compile Include="Migrations\201812012109021_TypeUdate.Designer.cs">
       <DependentUpon>201812012109021_TypeUdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812042257408_Type1.cs" />
+    <Compile Include="Migrations\201812042257408_Type1.Designer.cs">
+      <DependentUpon>201812042257408_Type1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Event.cs" />
@@ -297,6 +301,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Order\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -317,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812012109021_TypeUdate.resx">
       <DependentUpon>201812012109021_TypeUdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812042257408_Type1.resx">
+      <DependentUpon>201812042257408_Type1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
