--- a/EventApplication/EventApplication/Web.config
+++ b/EventApplication/EventApplication/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,14 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EventApplication-20181130013615.mdf;Initial Catalog=aspnet-EventApplication-20181130013615;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="EventApplicationDB" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=EventApplicationDB-20181130155229; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|EventApplicationDB-20181130155229.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="EventContextDB" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=EventContextDB-20181130155525; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|EventContextDB-20181130155525.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="EventTypeContextDB" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=EventTypeContextDB-20181130155723; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|EventTypeContextDB-20181130155723.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EventApplication-20181205011507.mdf;Initial Catalog=aspnet-EventApplication-20181205011507;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="EventContextDB" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=EventContextDB-20181205012830; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|EventContextDB-20181205012830.mdf" providerName="System.Data.SqlClient" />
+    <add name="EventTypeContextDB" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=EventTypeContextDB-20181205013059; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|EventTypeContextDB-20181205013059.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
