--- a/EventApplication/EventApplication/EventApplication.csproj
+++ b/EventApplication/EventApplication/EventApplication.csproj
@@ -207,15 +207,24 @@
     <Compile Include="Migrations\201812050858480_EventContextDB.Designer.cs">
       <DependentUpon>201812050858480_EventContextDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812062141369_Index.cs" />
+    <Compile Include="Migrations\201812062141369_Index.Designer.cs">
+      <DependentUpon>201812062141369_Index.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812070159008_Event.cs" />
+    <Compile Include="Migrations\201812070159008_Event.Designer.cs">
+      <DependentUpon>201812070159008_Event.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Event.cs" />
     <Compile Include="Models\EventContextDB.cs" />
     <Compile Include="Models\EventType.cs" />
     <Compile Include="Models\EventTypeContextDB.cs" />
+    <Compile Include="Models\Home.cs" />
+    <Compile Include="Models\HomeContextDB.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\SampleData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -290,9 +299,11 @@
     <Content Include="Views\EventType\Details.cshtml" />
     <Content Include="Views\EventType\Edit.cshtml" />
     <Content Include="Views\EventType\Index.cshtml" />
+    <Content Include="Views\Home\_LastMinuteDeals.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\HomeContextDB\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -310,6 +321,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201812050858480_EventContextDB.resx">
       <DependentUpon>201812050858480_EventContextDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812062141369_Index.resx">
+      <DependentUpon>201812062141369_Index.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812070159008_Event.resx">
+      <DependentUpon>201812070159008_Event.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
