--- a/EventApplication/EventApplication/EventApplication.csproj
+++ b/EventApplication/EventApplication/EventApplication.csproj
@@ -299,6 +299,7 @@
     <Content Include="Views\EventType\Index.cshtml" />
     <Content Include="Views\FindanEvent.cshtml" />
     <Content Include="Views\Home\_LastMinuteDeals.cshtml" />
+    <Content Include="Views\Home\_FindanEvent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
