--- a/EventApplication/EventApplication/EventApplication.csproj
+++ b/EventApplication/EventApplication/EventApplication.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Models\EventTypeContextDB.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -300,7 +301,10 @@
     <Content Include="Views\EventType\Index.cshtml" />
     <Content Include="Views\Home\_LastMinuteDeals.cshtml" />
     <Content Include="Views\Home\FindanEvent.cshtml" />
-    <Content Include="Views\EventRegister\Register.cshtml" />
+    <Content Include="Views\Home\EventTitle.cshtml" />
+    <Content Include="Views\Home\EventIndex.cshtml" />
+    <Content Include="Views\Home\EventDetails.cshtml" />
+    <Content Include="Views\Order\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
