--- a/EventApplication/EventApplication/EventApplication.csproj
+++ b/EventApplication/EventApplication/EventApplication.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DateAttribute.cs" />
     <Compile Include="Controllers\EventController.cs" />
+    <Compile Include="Controllers\EventStoreController.cs" />
     <Compile Include="Controllers\EventTypeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -217,10 +218,23 @@
     <Compile Include="Migrations\201812070159008_Event.Designer.cs">
       <DependentUpon>201812070159008_Event.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812090817576_FindanEvent.cs" />
+    <Compile Include="Migrations\201812090817576_FindanEvent.Designer.cs">
+      <DependentUpon>201812090817576_FindanEvent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812090821287_HomeController.cs" />
+    <Compile Include="Migrations\201812090821287_HomeController.Designer.cs">
+      <DependentUpon>201812090821287_HomeController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812090839123_EventContextDB1.cs" />
+    <Compile Include="Migrations\201812090839123_EventContextDB1.Designer.cs">
+      <DependentUpon>201812090839123_EventContextDB1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Event.cs" />
     <Compile Include="Models\EventContextDB.cs" />
+    <Compile Include="Models\EventStore.cs" />
     <Compile Include="Models\EventType.cs" />
     <Compile Include="Models\EventTypeContextDB.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -304,9 +318,10 @@
     <Content Include="Views\EventType\Index.cshtml" />
     <Content Include="Views\Home\_LastMinuteDeals.cshtml" />
     <Content Include="Views\Home\FindanEvent.cshtml" />
-    <Content Include="Views\Home\EventTitle.cshtml" />
-    <Content Include="Views\Home\EventIndex.cshtml" />
-    <Content Include="Views\Home\EventDetails.cshtml" />
+    <Content Include="Views\EventStore\Browse.cshtml" />
+    <Content Include="Views\EventStore\Details.cshtml" />
+    <Content Include="Views\EventStore\EventSearch.cshtml" />
+    <Content Include="Views\EventStore\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -334,6 +349,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812070159008_Event.resx">
       <DependentUpon>201812070159008_Event.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812090817576_FindanEvent.resx">
+      <DependentUpon>201812090817576_FindanEvent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812090821287_HomeController.resx">
+      <DependentUpon>201812090821287_HomeController.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812090839123_EventContextDB1.resx">
+      <DependentUpon>201812090839123_EventContextDB1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
