--- a/EventApplication/EventApplication/EventApplication.csproj
+++ b/EventApplication/EventApplication/EventApplication.csproj
@@ -233,6 +233,18 @@
     <Compile Include="Migrations\201812091816576_latestModelUpdates.Designer.cs">
       <DependentUpon>201812091816576_latestModelUpdates.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812092324442_Validation.cs" />
+    <Compile Include="Migrations\201812092324442_Validation.Designer.cs">
+      <DependentUpon>201812092324442_Validation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812092342556_Validations.cs" />
+    <Compile Include="Migrations\201812092342556_Validations.Designer.cs">
+      <DependentUpon>201812092342556_Validations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812100005370_Validate.cs" />
+    <Compile Include="Migrations\201812100005370_Validate.Designer.cs">
+      <DependentUpon>201812100005370_Validate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Event.cs" />
@@ -364,6 +376,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812091816576_latestModelUpdates.resx">
       <DependentUpon>201812091816576_latestModelUpdates.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812092324442_Validation.resx">
+      <DependentUpon>201812092324442_Validation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812092342556_Validations.resx">
+      <DependentUpon>201812092342556_Validations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812100005370_Validate.resx">
+      <DependentUpon>201812100005370_Validate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
